--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     text-align: center;
 }
 
-h1 {
+h1,h2 {
     color: var(--primary);
 }
 
@@ -34,6 +34,7 @@ h1 {
 .home-card a:hover {
     text-decoration: underline;
 }
+
 
 .summary {
     display: grid;
